chronos_scripts/chronos_k8s/chronos-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: chronos-namespace
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: chronos-namespace
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: chronos-namespace
spec:
  serviceName: mongodb-headless
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/mongo
      volumes:
        - name: mongo-data
          persistentVolumeClaim: 
            claimName: s3-pvc
