chronos_scripts/chronos_k8s/chronos-rabbitmq.yml

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
  namespace: chronos-namespace
spec:
  clusterIP: None
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: chronos-namespace
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: chronos-namespace
spec:
  serviceName: rabbitmq-headless
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: chronos/rabbitmq:3.13
          imagePullPolicy: Never
          ports:
            - name: amqp
              containerPort: 5672
            - name: management
              containerPort: 15672
          volumeMounts:
            - name: rabbitmq-pvc
              mountPath: /var/lib/rabbitmq
            - name: rabbitmq-conf
              mountPath: /etc/rabbitmq/rabbitmq.conf
              subPath: rabbitmq.conf
      volumes:
        - name: rabbitmq-conf
          configMap:
            name: rabbitmq-conf
  volumeClaimTemplates:
      - metadata:
          name: rabbitmq-pvc
        spec:
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 2Gi
