chronos_scripts/chronos_k8s/chronos-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chronos-ingress-rabbitmq-redirect
  namespace: chronos-namespace
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: http://chronos.local/rabbitmq/
spec:
  ingressClassName: nginx
  rules:
  - host: chronos.local
    http:
      paths:
      - path: /rabbitmq
        pathType: Exact
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chronos-ingress
  namespace: chronos-namespace
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: chronos.local
    http:
      paths:
      - path: /rabbitmq(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
      - path: /employees(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: employees
            port:
              number: 8080
      - path: /time-loggers(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: time-loggers
            port:
              number: 8080
      - path: /time-reports(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: time-reports
            port:
              number: 8080
      - path: /notifications(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notifications
            port:
              number: 8080
      - path: /proxy(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: reverse-proxy
            port:
              number: 8080
